<resources>
    <string name="preciovariable">Precio variable</string>
    <string name="producto">(Producto o servicio)</string>
    <string name="articulo">Artículo</string>
    <string name="crearnueva"><u>Crear nueva</u></string>
    <string name="categoria">Categoría</string>
    <string name="editararticulo">Editar artículo</string>
    <string name="app_name">cashierPOS</string>
    <string name="action_settings">Settings</string>
    <string name="acceder">Acceder</string>
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="Email">Email</string>
    <string name="Salir">Salir</string>
    <string name="hintemail">Email</string>
    <string name="Nuevoarticulo">Nuevo artículo</string>
    <string name="hintcontrasena">************</string>
    <string name="hintsn">SN comercio</string>
    <string name="hintcif">A12345678</string>
    <string name="hintemail2">nombre@mail.com</string>
    <string name="guardar">Guardar</string>
    <string name="requisitos">Ver requisitos imagen</string>
    <string name="Insertelogo">Inserte el logo de su marca/comercio que desee mostrar en el Ticket.</string>
    <string name="app">Tu app de gestión de venta y cobro para el TPV que sincroniza tus operaciones con el Sistema Ticket BAI.</string>
    <string name="Bienvenido">Bienvenido a</string>
    <string name="Recuperarcontrasena">Recuperar contraseña</string>
    <string name="Open">Abrir</string>
    <string name="Close">Cerrar</string>
    <string name="DatosComerciales">Datos comerciales</string>
    <string name="Direccioncomercial">Dirección comercial</string>
    <string name="datos">Datos de registro</string>
    <string name="datosfiscales">Datos fiscales</string>
    <string name="nombrefiscal">Nombre fiscal*</string>
    <string name="direccionfiscal2">Direccion fiscal*</string>
    <string name="direccioncomercialfiscal">Dirección comercial y fiscal coinciden</string>
    <string name="cif2">CIF*</string>
    <string name="cifhint">A12345678</string>
    <string name="registra">Registra tu cuenta para aprovechar todas las ventajas que te ofrece la app con la que podrás sincronizar las operaciones de tu datáfono con el Sistema Ticket BAI</string>
    <string name="sn">S/N</string>
    <string name="cif">CIF</string>
    <string name="mas">+</string>
    <string name="crearcontrasena">Crear Contraseña</string>
    <string name="crearcuenta">Crear cuenta gratuita</string>
    <string name="gratis">¿Aún no estás registrado? Es gratis</string>
    <string name="anade">Añade artículos al ticket</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Cafes">Cafés</string>
    <string name="Menus">Menús</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Postres">Postres</string>
    <string name="Borrartodo">Borrar todo</string>
    <string name="verticket">Ver ticket</string>
    <string name="configuracioninicial">Configuración inicial</string>
    <string name="confirma">Confirma que los datos de tu comercio son correctos y comienza a utilizar la app:</string>
    <string name="nombrecomercial">Nombre comercial</string>
    <string name="nombrecomercialhint">Nombre comercial de empresa</string>
    <string name="Nombrefiscal">Nombre fiscal de empresa</string>
    <string name="nombrefiscalhint">Nombre fiscal de empresa</string>
    <string name="direccionfiscal">Dirección fiscal</string>
    <string name="domiciliohint">Domicilio (Calle,Número,Bloque…)</string>
    <string name="localidadhint">Localidad</string>
    <string name="codigopostalhint">Código Postal</string>
    <string name="provinciahint">Provincia</string>
    <string name="insertarlogo">Insertar logo</string>
    <string name="menu_venta">Venta</string>
    <string name="menu_micuenta">Mi cuenta</string>
    <string name="menu_misarticulos">Mis artículos</string>
    <string name="menu_misventas">Mis ventas</string>
    <string name="menu_misarqueos">Mis arqueos</string>
    <string name="menu_IngresarRetirar">Ingresar/Retirar</string>
    <string name="menu_TotalizarCierraCaja">Totalizar/Cierre caja</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <string name="telefonohint">Teléfono de contacto</string>
    <string name="Cierre">Cierre de caja</string>
    <string name="Proceda">Proceda al recuento de efectivo que dispone en caja, e introduzca su importe:</string>
    <string name="euro">€</string>
    <string name="continuar">Continuar</string>
    <string name="ingresarretirar">Ingresar/Retirar efectivo de caja</string>
    <string name="ingresar">Ingresar</string>
    <string name="retirar">Retirar</string>
    <string name="importe">Importe(€)</string>
    <string name="motivos">Motivos</string>
    <string name="aceptar">Aceptar</string>
    <string name="ventasytickets">Ventas y Tickets</string>
    <string name="salir">Salir</string>
    <string name="numero">Número</string>
    <string name="fecha">Fecha</string>
    <string name="total">TOTAL</string>
    <string name="arqueos">Arqueos</string>
    <string name="quitarfiltros">Quitar filtros</string>
    <string name="numer">Nº</string>
    <string name="cerrar">x</string>
    <string name="impresora">impresora</string>
    <string name="correo">correo</string>
    <string name="devolver">devolver</string>
    <string name="recuento_efectivo">RECUENTO EFECTIVO</string>
    <string name="descuadre">Descuadre</string>
    <string name="retirada_efectivo_al_cierre">Retirada Efectivo al cierre</string>
    <string name="fianza_nuevo_saldo_inicial">FIANZA (Nuevo saldo inicial)</string>
    <string name="resumen_por_m_todo_de_pago">RESUMEN POR MÉTODO DE PAGO</string>
    <string name="calculado">Calculado</string>
    <string name="efectivo">Efectivo</string>
    <string name="b_imponible">B. Imponible</string>
    <string name="_21">21%</string>
    <string name="resumen_de_impuestos">RESUMEN DE IMPUESTOS</string>
    <string name="n_arqueo">Nº ARQUEO:</string>
    <string name="_2020_00000">2020/00000</string>
    <string name="nombre_comercio">Nombre comercio</string>
    <string name="_10_08_2020">10/08/2020</string>
    <string name="_0_00">0:00</string>
    <string name="n_mero_de_ventas_tickets">Número de ventas(tickets)</string>
    <string name="_0">0</string>
    <string name="ventas">Ventas</string>
    <string name="_00_00">00.00</string>
    <string name="movimientos_caja">Movimientos caja</string>
    <string name="total_devoluciones">Total devoluciones</string>
    <string name="total_calculado">TOTAL CALCULADO (€)</string>
    <string name="cuadre_de_caja_efectivo">CUADRE DE CAJA (EFECTIVO)</string>
    <string name="saldo_inicial">Saldo inicial</string>
    <string name="entradas">Entradas</string>
    <string name="salidas">Salidas</string>
    <string name="devoluciones">Devoluciones</string>
    <string name="calculado_efectivo">CALCULADO EFECTIVO</string>
    <string name="art_culo_r_pido">Artículo Rápido</string>
    <string name="nombre_art_culo">Nombre artículo</string>
    <string name="nombre_categor_a">Nombre categoría</string>
    <string name="categor_a">Categoría</string>
    <string name="iva_10">IVA 10%</string>
    <string name="a_adir_a_ticket">Añadir a ticket</string>
    <string name="pvp">PVP (€)</string>
    <string name="mis_art_culos">Mis artículos</string>
    <string name="nuevacategoria">Nueva categoría</string>
    <string name="crear">Crear</string>
    <string name="confirmacorreo">Confirma correo</string>
    <string name="fianza">Indique el importe de efectivo que vaya a dejar en caja (fianza)</string>
    <string name="devoluci_n">Devolución:</string>
    <string name="d20000000001">D20000000001</string>
    <string name="origen">Origen:</string>
    <string name="marcar_todo">Marcar todo</string>
    <string name="ticket">Ticket</string>
    <string name="t000">T000</string>
    <string name="total_ticket">TOTAL TICKET</string>
    <string name="a_devolver_efectivo">A DEVOLVER (EFECTIVO)</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_art_culo">Editar artículo</string>
    <string name="editar_l_neas_de_ticket">Editar líneas de ticket</string>
    <string name="confirmar_unidades">Confirmar unidades</string>
    <string name="ingresar_retirar">Ingresar/Retirar</string>
    <string name="entrada_de_efectivo_realizada">Entrada de efectivo realizada</string>
    <string name="_22_00">+ 22.00€</string>
    <string name="papelera">papelera</string>
    <string name="mis_arqueos">Mis arqueos</string>
    <string name="calendario">calendario</string>
    <string name="filtroqr">filtroqr</string>
    <string name="mis_ventas">Mis ventas</string>
    <string name="t20000000001">T20000000001</string>
    <string name="_01_01_1990">01/01/1990</string>
    <string name="_10_40">10:40</string>
    <string name="uds">Uds.</string>
    <string name="art_culo">Artículo</string>
    <string name="precio_u">Precio U.</string>
    <string name="base">Base</string>
    <string name="iva">IVA</string>
    <string name="cuota">Cuota</string>
    <string name="_10">10%</string>
    <string name="_50_00">50.00€</string>
    <string name="gracias_por_su_visita">GRACIAS POR SU VISITA</string>
    <string name="volver">Volver</string>
    <string name="nombre_del_comercio">NOMBRE DEL COMERCIO</string>
    <string name="nombre_fiscal">Nombre fiscal</string>
    <string name="cif_nif">CIF/NIF</string>
    <string name="direcci_n_fiscal">Dirección fiscal</string>
    <string name="f_simplif">F. SIMPLIF:</string>
    <string name="cambio">CAMBIO</string>
    <string name="pago_realizado">Pago realizado</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="imprimir_ticket_regalo">Imprimir ticket regalo</string>
    <string name="imprimir_ticket">Imprimir ticket</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="configuraci_n_documentos_de_venta">Configuración documentos de venta</string>
    <string name="serie_devoluciones">Serie devoluciones</string>
    <string name="pr_ximo_n_mero">Próximo número</string>
    <string name="retirada_de_efectivo_realizada">Retirada de efectivo realizada</string>
    <string name="en_caja">EN CAJA</string>
    <string name="motivo">Motivo:</string>
    <string name="configurar">configurar</string>
    <string name="configuracion">configuracion</string>
    <string name="cobrar">Cobrar</string>
    <string name="ticket_de_venta">TICKET DE VENTA</string>
    <string name="icono">icono</string>
    <string name="cashier">cashier</string>
    <string name="pos">POS</string>
    <string name="cobrotarjeta">cobrotarjeta</string>
    <string name="para_realizar_el_pago_introduzca_o_acerque_la_tarjeta">PARA REALIZAR EL PAGO, INTRODUZCA O ACERQUE LA TARJETA</string>
    <string name="totalizar_cierre_caja">Totalizar/Cierre caja</string>
    <string name="serie_tickets_venta">Serie tickets venta</string>
    <string name="_1">1</string>
    <string name="imagen">imagen</string>
    <string name="t">T</string>
    <string name="logo">logo</string>
    <string name="desea_continuar">¿Desea continuar?</string>
    <string name="imagenarticulo">imagenarticulo</string>
    <string name="imagenborrar">imagenborrar</string>
    <string name="imagenlineas">imagenlineas</string>
    <string name="borrar_ticket">Borrar ticket</string>
    <string name="imagencheque">imagencheque</string>
    <string name="cheque_restaurante">Cheque restaurante</string>
    <string name="imagenefectivo">imagenefectivo</string>
    <string name="imagentarjeta">imagentarjeta</string>
    <string name="venta">VENTA</string>
    <string name="editar_l_neas">Editar líneas</string>
    <string name="la_imagen_debe_ser_png_y_en_blanco_y_negro">La imagen debe ser PNG y en blanco y negro</string>
    <string name="cruz">cruz</string>
    <string name="inserte_numero">Inserte Numero</string>
    <string name="filtrar">Filtrar</string>
    <string name="menos">menos</string>
</resources>