<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_venta"
            android:icon="@drawable/ventaicono"
            android:title="@string/menu_venta" />
        <item
            android:id="@+id/nav_micuenta"
            android:icon="@drawable/micuenta"
            android:title="@string/menu_micuenta" />
        <item
            android:id="@+id/nav_misarticulos"
            android:icon="@drawable/misarticulos"
            android:title="@string/menu_misarticulos" />
        
        <item
            android:id="@+id/nav_misventas"
            android:icon="@drawable/misventas"
            android:title="@string/menu_misventas" />
        <item
            android:id="@+id/nav_misarqueos"
            android:icon="@drawable/misarqueos"
            android:title="@string/menu_misarqueos" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ingresarretirar"
            android:icon="@drawable/ingresarretirar"
            android:title="@string/menu_IngresarRetirar" />

        <item
            android:id="@+id/nav_totalizarcierrecaja"
            android:icon="@drawable/totalizarcierrecaja"
            android:title="@string/menu_TotalizarCierraCaja" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@drawable/cerrarsesion"
            android:title="@string/menu_cerrarsesion" />


    </group>


</menu>

